--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,44 @@
 <h1>Eat da Burger!</h1>
 
-<ul>
-  {{#each cats}}
-    {{#unless this.sleepy}}
-      <li>
-        {{this.name}}
+<div class="row">
+  <div class="col-md-6">
+    <ul>
+      {{#each burger}}
+        {{#unless this.devoured}}
+          <p>
+            {{this.burger_name}}
+          </p>
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devour" value="true">
-          <button type="submit">DEVOUR IT!</button>
-        </form>
+            <form action="/{{this.id}}?_method=PUT" method="POST">
+              <input type="hidden" name="devour" value="false">
+              <button type="submit">DEVOUR IT!</button>
+            </form>
+          
+        {{/unless}}
+      {{/each}}
+    </ul>
+  </div>
 
-        {{!--{{> cats/delete-cat}}--}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
+  <div class="col-md-6">
+    <ul>
+      {{#each burger}}
+        {{#if this.devoured}}
+          <li>
+            {{this.burger_name}}
+          </li>
+        {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+</div>
 
-{{!--
-<ul>
-  {{#each cats}}
-    {{#if this.sleepy}}
-      <li>
-        {{this.name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="false">
-          <button type="submit">WAKE UP!</button>
-        </form>
-
-        {{> cats/delete-cat}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>--}}
-
+<div class ="row" id="add-burger">
 <h2>Enter a burger you want to eat and click on the "Submit" button</h2>
 <form class="create-update-form" action="/" method="POST">
 
   <div class="form-group">
-    <input type="text" id="ca" name="name">
+    <input type="text" id="ca" name="burger_name">
   </div>
-  <button type="submit">Add Burger</button>
+  <button type="submit" id="add-button">Add Burger</button>
 </form>
+</div>
