--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Eat da burger</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	  <!-- Bootstrap File -->
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/style/style.css">
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<title>Eat da burger</title>
 	</head>
 	<body>
-		{{{ body }}}
+		<div class="container"> 
+			{{{ body }}}
+		</div>
+		
 	</body>
 </html>
