--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,14 @@
+.container {
+    margin-top: 15px;
+}
+
+#image {
+    height: 150px;
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
 h1 {
     color: red;
     text-align: center;
